# app-packaging

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-release.yml  docker-deploy.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Dashboard.vue  Home.vue  Login.vue
src/: main.py
src/web/: __init__.py  app.py  auth.py  auth_routes.py  routes.py
src/web/static/: .gitkeep
